--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@apollo/client": "^3.8.7",
+    "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
     "graphql": "^16.8.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
     "sweetalert2": "^11.10.1"
